--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@ title: Battle Facilities Calculator
 
 github: [metadata]
   
-url: "https://to-metrion.github.io"
+url: "https://will-jj.github.io"
   
-repository: to-metrion/to-metrion.github.io
+repository: eisencalc
 
 description:
   
